<resources>
    <string name="app_name">Getcontent</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_search">Search</string>
    <string name="vendor_name">March Media</string>
    <string name="vendor_skill">Visual Photography, Videography</string>
    <string name="vendor_desc">March Media merupakan production house yang melakukan jasa videografi dan fotografi</string>
    <string name="vendor_pak">Paket</string>
    <string name="Follow">Ikuti</string>
    <string name="contact">Chat</string>
    <string name="design">Post</string>
    <string name="about">Tentang GetContent</string>
    <string name="payment">Payment</string>
    <string name="notelp">+628113340369</string>
    <string name="detailpak">Detail Paket</string>
    <string name="transfer">Mohon transfer ke nomor rekening berikut</string>
    <string name="norek">12345678910</string>
    <string name="upload">Upload</string>
    <string name="atas_nama">a/n Naufal Aziz Imaduddin</string>
    <string name="upload_bukti">Upload bukti pembayaran</string>
    <string name="keterangan">Mohon bayar dalam waktu paling lambat 1x24 jam, bila lebih maka transaksi dibatalkan, setelah transfer mohon sertakan bukti transfer.</string>
    <string name="description">Berdiri sejak 2020, GetContent adalah marketplace antara pelaku usaha sebagai client dengan Branding Agency atau Creative Agency. </string>
    <string name="description2">Kami bekerjasama dengan creative agency pilihan yang sudah berpengalaman, kami selalu memberikan hasil yang terbaik untuk para konsumen kami.</string>
    <string name="silver">Silver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    bottom sheet-->
    <string name="app_name2">BottomSheetExample</string>
    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
        A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
</resources>