<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/payment"
        android:background="@drawable/aboutus"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="center"
        android:paddingTop="8dp"
        android:textSize="25sp"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:text="@string/detailpak"/>

        <ImageView
            android:elevation="8dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:background="@drawable/silpost"/>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/transfer"
            android:textAlignment="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:text="@string/norek"
            android:textAlignment="center"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0.1"
            android:textColor="@color/black"
            android:paddingTop="9dp"
            android:textSize="17sp"
            android:background="@drawable/aboutus"/>

        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/atas_nama"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"/>

        <TextView
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:fontFamily="@font/roboto"
            android:padding="10dp"
            android:textAlignment="center"/>

        <Button
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/upload"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:background="@drawable/pick_vendor" />

        <TextView
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_bukti"
            android:fontFamily="@font/roboto"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"/>

    </LinearLayout>



</ScrollView>